# stgrst

./: Cargo.toml  Dockerfile  docker-compose.yml  index.html
src/: lib.rs  main.rs
src/core/: errors.rs  file.rs  file_meta.rs  job.rs  mod.rs  range.rs
src/routes/: mod.rs  storage.rs  task.rs
src/services/: bucket.rs  mod.rs
