[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.8.0"
actix-web = "4.4.1"
actix-cors = "0.6.5"
serde = "1.0.193"
futures = "0.3"
env_logger = "*"
tokio-util = { version = "0.7.10", features = ["compat"] }
derive_more = "0.99.17"


# https://github.com/zip-rs/zip
# https://github.com/geofmureithi/apalis
# https://github.com/jonhoo/faktory-rs
# https://github.com/rusty-celery
