[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
md-5 = "0.10.6"
mongodb = "2.8.2"
rocket = "0.5.0"
rocket_cors = "0.6.0"
tokio-util = { version = "0.7.10", features = ["compat"] }
apalis = { version = "0.5.1", features = ["redis"] }
derive_more = "0.99.17"
serde = "1.0.193"
anyhow = "1"
env_logger = "0.11.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# https://github.com/zip-rs/zip
